pkl-core/src/test/files/LanguageSnippetTests/input/errors/deleteInExpressionPosition.pkl
foo = new Dynamic {
  bar = 42
  baz = false
}

qux = (foo) {
  bar = if (false) 0 else delete
}
